[package]
name = "mdbook-rust-highlight"
version = "0.1.0"
edition = "2024"
authors = ["Sagi21805 <sagi21805@gmail.com>"]
description = "Rust syntax highlighter for mdbook code blocks"
license = "MIT"
homepage = "https://github.com/sagi21805/mdbook-rust-highlight"
repository = "https://github.com/sagi21805/mdbook-rust-highlight"

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
ropey = "1.6.1"
proc-macro2 = { version = "1", default-features = false, features = [
    "span-locations",
] }
strum = "0.26"
strum_macros = "0.26"
mdbook = "0.4.52"
serde_json = "1.0.145"
regex = "1.11.2"
paste = "1.0.15"
